# coreason-manifest

./: .clinerules  .cursorrules  .gitattributes  .gitignore  .gitleaksignore  .lycheeignore  .pre-commit-config.yaml  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  Dockerfile  GREENFIELD_AUDIT.md  NOTICE  README.md  REFACTOR_PLAN.md  REVIEW.md  SECURITY.md  THIRD-PARTY-NOTICES.md  VIGNETTE.md  all_tests_output.txt  append_tests.py  ast_bounding.py  bases.txt  check_ast.py  check_disc.py  check_enum_types.py  check_enums.py  check_nulls.py  check_patterns.py  clean_federation.py  codecov.yml  commit_message.txt  composite_output.txt  coreason_ontology.schema.json  cov_final.txt  cov_report.txt  debug_finder.py  debug_hash.py  debug_hash2.py  debug_hash3.py  (+284 more)
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: advanced-security.yml  bandit.yml  ci-cd.yml  ci.yml  codeql.yml  container-scan.yml  docker.yml  fork-monitor.yml  nightly-fuzzing.yml  osv-scanner.yml  publish.yml  release-please.yml  release.yml  scorecard.yml  security.yml  trivy.yml  trufflehog.yml  zap-dast.yml
.jules/: bolt.md  sentinel.md
bindings/rust/: Cargo.toml  NOTICE  THIRD-PARTY-NOTICES.md
bindings/rust/src/: lib.rs  ontology.rs
bindings/typescript/: .npmrc  LICENSE  NOTICE  THIRD-PARTY-NOTICES.md  package-lock.json  package.json  tsconfig.json
debug_symlink/jail/: malicious_module
docs/: GLOSSARY.md  LEXICON.md  MCP_PROJECTION.md  STUDY_GUIDE.md  VIGNETTE.md  active_defense.md  active_memory_interface.md  agent_behavior_protocols.md  agent_card_generator.md  agent_request_envelope.md  ai_safety.md  applied_research.md  architecture.md  assembler_pattern.md  atomic_agents.md  audit_compliance.md  audit_hashing.md  audit_report.md  behavior.md  behavioral_protocols.md  builder_sdk.md  cli.md  cli_interop.md  cli_validation.md  cognitive_science.md  cognitive_visualization_and_collaboration.md  common_primitives_rationale.md  compliance_schema.md  composition.md  constitutional_ai.md  content_negotiation.md  coreason_agent_manifest.md  coreason_base_model_rationale.md  council_features.md  data_integrity.md  economics.md  episteme_reasoning.md  error_handling_standards.md  evaluation.md  evaluation_metadata.md  (+71 more)
docs/adr/: 0001-the-god-context-monolith.md
docs/agent_examples/: 01_causal_state_mutations.md
docs/agents/: cognitive_profiles.md  reasoning_engines.md
docs/api/: oversight.md  state.md  workflow.md
docs/architecture/: ADR-001-shared-kernel-boundaries.md  ADR-002-flow-topology.md  behavioral_protocols.md  core_philosophy.md  product_requirements.md  shared_kernel.md  topology_and_state.md  transport_layer.md
docs/cap/: behavior.md  presentation_layer.md  runtime-model.md  specification.md  stream_lifecycle.md  streaming_contracts.md  transport-envelope.md  wire_protocol.md
docs/capabilities/: tooling.md
docs/cop/: runtime-model.md
docs/core/: flows.md  nodes.md
docs/governance/: policies.md
docs/guides/: building_agent_graphs.md  enforcing_governance.md  resilience_strategies.md
docs/interop/: integrity.md  mcp_adapter.md  mcp_interop.md  openai_adapter.md  streams.md  telemetry.md
docs/orchestration/: flows.md  nodes.md  resilience.md  strategies.md
docs/reference/: agents.md  capabilities.md  governance.md  orchestration.md
docs/rfcs/: 001-v2-canonical-yaml.md  002-sse-transport-v2.md  003-v2-development-platform.md  004-cap-client-sdk.md  005-recursive-composition.md  005-strict-error-protocol.md
docs/runtime/: graph_executor.md  runtime_principles.md
docs/shared/: identity.md
docs/tools/: builder_api.md  cli.md  visualizer.md
docs/transport/: http-spec.md
examples/: ide_playground.py
examples/01_financial/: ide_playground.py
examples/02_pharma_launch/: lipitor_strategy.py
examples/output/: agent_flow.mmd
scratch/: epic2_fix_imports.py  epic2_fix_tests.py  epic2_refactor.py  epic3_refactor.py  epic5_fix_tests.py  epic5_refactor.py  inject_topology_class.py  refactor.py  script.py  test_cleaner.py  test_fixer2.py  test_fixer3.py  test_hyp.py  test_rewriter.py
scripts/: apply_license.py  audit_compliance.py  coverage_analysis.py  enforce_cryptographic_determinism.py  enforce_headers.py  evaluate_architecture.py  evaluate_instantiation_bounds.py  evaluate_topological_reachability.py  fix_headers.py  generate_cross_language_bindings.py  generate_schemas.py  generate_v2_schema.py  inject_docstrings.py  llm_fuzz.py  mcp_ping.py  migrate_v1_to_v2.py  rebuild_schema.py  refactor_ontology.py  refactor_renames.py  remove_orphaned.py  semantic_diff.py  swarm_watchdog.py  universal_ontology_compiler.py  validate_v2_sample.py
src/coreason_manifest/: __init__.py  builder.py  causality.py  cli.py  common.py  dsl.py  engine.py  envelope.py  errors.py  governance.py  integrity.py  loader.py  models.py  policy.py  recipes.py  server.py  shortcuts.py  state.py  validator.py
test_walk/: link
tests/: TEST_PLAN.md  __init__.py  conftest.py  factories.py  reproduce_placeholder_leak.py  test_abstract_topologies.py  test_adapters_phase4.py  test_agentic_forge.py  test_ai_ready_parser.py  test_algebra.py  test_algebra_more.py  test_antibody.py  test_architecture.py  test_architecture_fixes.py  test_argumentation.py  test_async_utils.py  test_atomic_agent.py  test_audit.py  test_audit_complex.py  test_audit_edge_cases.py  test_audit_integrity.py  test_audit_lineage.py  test_audit_message.py  test_audit_security.py  test_audit_v2.py  test_auth_validation.py  test_base_model.py  test_basic.py  test_behavior_complex.py  test_builder.py  test_builder_coverage.py  test_builder_coverage_gaps.py  test_builder_manifest.py  test_builder_memory.py  test_builder_topology.py  test_canonical_hashing.py  test_canonicalizer.py  test_cap.py  test_cap_complex.py  test_cap_errors.py  (+499 more)
tests/__snapshots__/: test_snapshots.ambr
tests/algebra/: test_algebra_coverage.py  test_core_algebra.py  test_properties.py
tests/cli/: test_main.py  test_scaffold.py
v0.25.3/: 404.html  index.html  objects.inv  sitemap.xml
v0.25.4/: 404.html  index.html  sitemap.xml
(+717 files in other folders)
