[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "coreason_manifest"
dynamic = ["version"]
description = "This package is the definitive source of truth. If it isn't in the manifest, it doesn't exist. If it violates the manifest, it doesn't run."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [
    { name = "Gowtham A Rao", email = "gowtham.rao@coreason.ai" },
]
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.12.5",
]

[project.urls]
Homepage = "https://github.com/CoReason-AI/coreason_manifest"
Repository = "https://github.com/CoReason-AI/coreason_manifest"
Documentation = "https://github.com/CoReason-AI/coreason_manifest"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "pre-commit>=4.5.1",
    "pytest-cov>=7.0.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=0.24.0",
    "mypy>=1.19.1",
    "pytest-asyncio>=1.3.0",
    "types-pyyaml>=6.0.12.20250915",
    "tzdata>=2025.3",
    "pytest-benchmark>=5.2.3",
    "deepdiff>=8.6.1",
    "deptry>=0.23.0",
    "pytest-xdist>=3.6.1",
    "mike>=2.1.3",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "hypothesis>=6.151.9",
    "syrupy>=5.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/coreason_manifest"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E", "F", "B", "I", "UP", "SIM", "RUF", "ARG", "C4", "PT", "TCH", "FA", "PIE", "RET",
    "PERF", "FURB", "LOG", "N", "A", "S"
]
ignore = ["S101", "TC001", "TC002", "TC003", "UP037"]

[tool.ruff.lint.isort]
known-first-party = ["coreason_manifest"]

[tool.mypy]
python_version = "3.14"
mypy_path = "src"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = false
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = [
    ".*human\\.py$",
]

[tool.pytest.ini_options]
addopts = "-n auto --cov=coreason_manifest --cov-report=term-missing --cov-report=xml --cov-fail-under=90"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore:Pydantic serializer warnings:UserWarning"]
markers = [
    "evals: Agentic UX Trajectory Evals",
]

[tool.coverage.run]
omit = ["tests/*", "/tmp/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "if os.name == \"posix\":",
    "\\.\\.\\.",
]

[tool.hatch.version]
source = "vcs"
