[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "coreason_manifest"
dynamic = ["version"]
description = "This package is the definitive source of truth. If it isn't in the manifest, it doesn't exist. If it violates the manifest, it doesn't run."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [
    { name = "Gowtham A Rao", email = "gowtham.rao@coreason.ai" },
]
classifiers = [
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.12.5",
    "jsonpatch>=1.33",
    "numpy>=2.4",
    "canonicaljson>=2.0.0",
    "msgspec>=0.21.1",
    "pycrdt>=0.12.50",
]

[project.optional-dependencies]
graph = [
    "rustworkx>=0.17.1",
]

[project.urls]
Homepage = "https://github.com/CoReason-AI/coreason-manifest"
Repository = "https://github.com/CoReason-AI/coreason-manifest"
Documentation = "https://github.com/CoReason-AI/coreason-manifest"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.4",
    "pre-commit>=4.5.1",
    "pytest-cov>=7.0.0",
    "zensical>=0.0.26",
    "mypy>=1.19.1",
    "pytest-asyncio>=1.3.0",
    "types-pyyaml>=6.0.12.20250915",
    "tzdata>=2025.3",
    "pytest-benchmark>=5.2.3",
    "deepdiff>=8.6.2",
    "deptry>=0.24.0",
    "pytest-xdist>=3.8.0",
    "hypothesis>=6.151.9",
    "hypothesis-jsonschema>=0.23.1",
    "syrupy>=5.1.0",
    "types-defusedxml>=0.7.0.20260408",
]

[tool.hatch.build.targets.sdist]
include = ["src/", "LICENSE", "NOTICE", "README.md", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
packages = ["src/coreason_manifest"]

[tool.hatch.build.targets.wheel.shared-data]
"LICENSE" = "coreason_manifest-license/LICENSE"
"NOTICE" = "coreason_manifest-license/NOTICE"

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E", "F", "B", "I", "UP", "SIM", "RUF", "ARG", "C4", "PT", "TCH", "FA", "PIE", "RET",
    "PERF", "FURB", "LOG", "N", "A", "S"
]
ignore = ["S101", "TC001", "TC002", "TC003", "UP037", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["coreason_manifest"]

[tool.mypy]
python_version = "3.14"
mypy_path = "src"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = false
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = [
    ".*human\\.py$",
    "scratch/.*",
]

[tool.pytest.ini_options]
addopts = "--cov=src/coreason_manifest --cov-report=xml --cov-report=term-missing --cov-fail-under=95 -n auto"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:Pydantic serializer warnings:UserWarning",
    "ignore::pytest_benchmark.logger.PytestBenchmarkWarning",
]
markers = [
    "evals: Agentic UX Trajectory Evals",
]

[tool.coverage.run]
omit = ["tests/*", "/tmp/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "if os.name == \"posix\":",
    "\\.\\.\\.",
]

[[tool.mypy.overrides]]
module = ["rustworkx", "rustworkx.*"]
ignore_missing_imports = true
