[package]
name = "coreason-manifest-types"
version = "1.0.0"
edition = "2021"
description = "Rust bindings for the CoReason Hollow Data Plane."
license = "LicenseRef-Prosperity-3.0"
repository = "https://github.com/CoReason-AI/coreason-manifest"
homepage = "https://github.com/CoReason-AI/coreason-manifest"
documentation = "https://github.com/CoReason-AI/coreason-manifest"
authors = ["CoReason, Inc <license@coreason.ai>"]
categories = ["data-structures", "encoding"]
keywords = ["coreason", "ontology", "manifest", "schema"]
readme = "../../README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
