[package]
name = "coreason-manifest"
version = "0.72.1-2-g0663be04"
edition = "2021"
description = "Rust bindings for the CoReason Hollow Data Plane."
license-file = "LICENSE"
repository = "https://github.com/CoReason-AI/coreason-manifest"
homepage = "https://github.com/CoReason-AI/coreason-manifest"
documentation = "https://github.com/CoReason-AI/coreason-manifest"
authors = ["CoReason, Inc <license@coreason.ai>"]
categories = ["data-structures", "encoding"]
keywords = ["coreason", "ontology", "manifest", "schema"]
readme = "../../README.md"
include = ["src/**/*", "Cargo.toml", "LICENSE", "NOTICE"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regress = "0.11.1"
